[gd_scene load_steps=3 format=3 uid="uid://0d4bcyld4vt0"]

[ext_resource type="Script" path="res://scenes/machines/m_p_s_label.gd" id="1_q36qd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xgc5"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.392157)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="m_p_s_label" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
offset_right = 161.0
offset_bottom = 132.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7xgc5")
script = ExtResource("1_q36qd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Name" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Water Machine II"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CostPerRun" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.835294, 0.807843, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "$8000/cycle"
horizontal_alignment = 1

[node name="Temperature" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Temperature"
horizontal_alignment = 1

[node name="Oxygen" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Oxygen"
horizontal_alignment = 1

[node name="CarbonDioxide" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Carbon Dioxide"
horizontal_alignment = 1

[node name="Water" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Water"
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Destroy" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Destroy"

[node name="Purchase" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Purchase"

[connection signal="pressed" from="VBoxContainer/Destroy" to="." method="_on_destroy_pressed"]
[connection signal="pressed" from="VBoxContainer/Purchase" to="." method="_on_purchase_pressed"]
